--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -19,6 +19,7 @@
 @link_hover_text-color:                               #FF7033;
 @link_text-color_inline:                              @link_text-color;
 @link_hover_text-color_inline:                        @link_hover_text-color;
+@readonly_marker-color:                               @readonly_color;
 
 //button
 @primary_border-color_button:                                           #eb6c65;
@@ -170,6 +171,12 @@
 @monthnav_item_border-color_datePicker:                                    #535c68;
 @monthlist_heading_text-color_datePicker:                                  #cccccc;
 
+//List
+
+@master_item_background-color_list:                                         #30343b;
+@master_item_selected_background-color_list:                                #424851;
+@master_separator_color_list:                                               #18212b;
+
 //TODO OLD NOT SPECIFIED VARIABLES
 
 @cloud-background-color:                                                      #383d44;
@@ -177,12 +184,8 @@
 @cloud-light-border-color:                                                    #6b6b6b;
 @cloud-acc-border-color:                                                      #404040;
 
-@marker-bg-image:                                                             url("img/rowSelect.png");
-@readonly_marker-color:                                                       @readonly_color;
 
-@background-color_List-masterList:                                            #30343b;
-@background-color_List-masterList-item_selected:                              #424851;
-@border-color_List-masterList:                                                #18212b;
+
 
 // Controls.Explorer
 @background-color_TileView-item: #464d57;
