https://online.sbis.ru/opendoc.html?guid=17cb2b0d-d14c-4dd3-9acd-9abc49a1d56b

--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -25,6 +25,7 @@
 @import "_loadingIndicator";
 @import "_shortDatePicker";
 @import "_lookup";
+@import "_lookupPopup";
 @import "_scroll";
 @import "_breadcrumbs";
 @import "_suggest";
