--- a/Controls-default-theme/aliases/_lookup.less
+++ b/Controls-default-theme/aliases/_lookup.less
@@ -63,6 +63,13 @@
 @item_offset_lookupSelectedCollection:                                          4px;
 @item_height_lookupSelectedCollection:                                          @inline_height_default;
 
+//Размеры шрифта
+@item_font-size_m_input:                                                         @font-size_m;
+@item_font-size_l_input:                                                         @font-size_l;
+@item_font-size_xl_input:                                                        @font-size_xl;
+@item_font-size_2xl_input:                                                       @font-size_2xl;
+@item_font-size_3xl_input:                                                       @font-size_3xl;
+
 // Кнопка сброса одного значения
 
 @item_reset-button_icon-size_lookupCollection:                                  @icon-size_s;
