--- a/Controls/_lookupPopup/SelectedCollection/_Popup.less
+++ b/Controls/_lookupPopup/SelectedCollection/_Popup.less
@@ -10,8 +10,8 @@
     max-width: none;
 }
 
-.controls-SelectedCollection__header_wrapper {
-    line-height: @icon-size_m;
+.controls-SelectedCollection__header_wrapper_theme-@{themeName} {
+    line-height: @header_height_lookupPopup;
     padding-left: @spacing_default_l;
     padding-top: @close-button_offset-top_infobox;
 }
