https://online.sbis.ru/opendoc.html?guid=2b9c9e47-b0e3-47e0-ba5d-2daba386e365

--- a/Controls-default-theme/controls/_PeriodDialog.less
+++ b/Controls-default-theme/controls/_PeriodDialog.less
@@ -13,3 +13,5 @@
 @shift-left_PeriodDialog-picker-withoutModeBtn: -(@header_padding-left_datePicker + @border-thickness_datePicker);
 
 @shift-top_PeriodDialog-selector: floor((@height_DateSelectorBase - @header_height_datePicker)/2) - @border-thickness_datePicker;
+
+@height_DateSelectorBase:                 @height_s;//???
