--- a/Controls/_dateRange/LiteSelector/_LiteSelector.less
+++ b/Controls/_dateRange/LiteSelector/_LiteSelector.less
@@ -8,13 +8,13 @@
 }
 
 .controls-DateRangeSelectorLite__view_minWidth {
-   min-width: @min-width_DateRangeSelectorLite;
+   min-width: @min-width_dateRangeSelector;
 }
 
 .controls-DateRangeSelectorLite__picker-normal {
-   margin-top: ceil((@height_DateLinkView - @item_height_shortDatePicker)/2) - @border-thickness_shortDatePicker;
+   margin-top: ceil((@height_dateRangeSelector - @item_height_shortDatePicker)/2) - @border-thickness_shortDatePicker;
 }
 
 .controls-DateRangeSelectorLite__picker-years-only {
-   margin-top: ceil((@height_DateLinkView - @item_height_shortDatePicker)/2) - @item_height_shortDatePicker;
+   margin-top: ceil((@height_dateRangeSelector - @item_height_shortDatePicker)/2) - @item_height_shortDatePicker;
 }
