https://online.sbis.ru/opendoc.html?guid=2b9c9e47-b0e3-47e0-ba5d-2daba386e365

--- a/Controls/_dateRange/LinkView/_LinkView.less
+++ b/Controls/_dateRange/LinkView/_LinkView.less
@@ -95,7 +95,7 @@
 
 .controls-DateLinkView__clear_theme-@{themeName} {
    color: @reset-button_icon-color_dateRangeSelector;
-   font-family: @reset-button_icon-size_dateRangeSelector;
+   font-family: @icon_font-family_s;
 }
 
 .controls-DateLinkView__clear {
