https://online.sbis.ru/opendoc.html?guid=2cece7ee-c6f7-4e95-9e3c-22a14c2b7a1e

--- a/Controls-default-theme/aliases/_buttons.less
+++ b/Controls-default-theme/aliases/_buttons.less
@@ -193,3 +193,15 @@
 @box-shadow_button:                             none;
 @box-shadow_button_toolButton:                  0 1px 4px rgba(0, 0, 0, 0.05);
 @box-shadow_button_functionalButton:            0 1px 4px rgba(0, 0, 0, 0.05);
+
+//Стили кнопки-стрелки
+
+@box-shadow_ArrowButton:                        0 1px 4px rgba(0, 0, 0, 0.05);
+@border-color_ArrowButton:                      rgba(0, 0, 0, 0.08);
+@readonly_border-color_ArrowButton:             rgba(0, 0, 0, 0.08);
+@border-color_hover_ArrowButton:                #CCC;
+@icon-color_ArrowButton:                        #999;
+@hover_icon-color_ArrowButton:                  @hover_text-color_button;
+@readonly_icon-color_ArrowButton:               #CCC;
+@width_ArrowButton:                             24px;
+@height_ArrowButton:                            24px;
