https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290 алиасы для грида

--- a/Controls-default-theme/aliases/_list.less
+++ b/Controls-default-theme/aliases/_list.less
@@ -152,6 +152,15 @@
 @detail_background-color_masterDetail:                              transparent;
 @editing-toolbar_offset-left_listEditInPlace:                       6px;
 
+// Разделители между элементами
+
+@item-separator_s_thickness_list:                                   1px;
+@item-separator_l_thickness_list:                                   3px;
+@item_edge_separator_s_color_list:                                  #EAEAEA;
+@item_edge_separator_l_color_list:                                  #F3F3F3;
+@item_separator_s_color_list:                                       #F5F5F5;
+@item_separator_l_color_list:                                       #F3F3F3;
+
 
 
 // Переменные для операций над записью
