https://online.sbis.ru/opendoc.html?guid=5b04c8f6-ab31-401d-9860-3ccedf638157 Добавил темизированную настройку ширины маленьких по ширине блоков

--- a/Controls-demo/Controls-demo.less
+++ b/Controls-demo/Controls-demo.less
@@ -368,3 +368,13 @@
    background-color: @background-color_operationsPanel;
    height: @height_operationsPanel;
 }
+
+.controlsDemo__fixedWidth-s_theme-dark,
+.controlsDemo__fixedWidth-s_theme-default {
+  width: 300px;
+}
+
+.controlsDemo__fixedWidth-s_theme-dark-large,
+.controlsDemo__fixedWidth-s_theme-light-large {
+  width: 400px;
+}
