https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -51,6 +51,9 @@
 @background-color_inputText:                          transparent;
 @invalid_background-color_inputText:                  transparent;
 
+//decorator
+@text_background-color_decoratorHighlight:            #535c68;
+
 //dialog
 @background-color_dialog:                             #383D44;
 @header_background-color_dialog:                      #383D44;
@@ -172,10 +175,26 @@
 @monthlist_heading_text-color_datePicker:                                  #cccccc;
 
 //List
+@item_separator_s_color_list:                                                 #4a515a;
+@item_edge_separator_s_color_list:                                            #6b6b6b;
 
 @master_item_background-color_list:                                         #30343b;
 @master_item_selected_background-color_list:                                #424851;
 @master_separator_color_list:                                               #18212b;
+
+//Grid
+@header_background-color_grid:                                                #424851;
+@header_text-color_grid:                                                      #999;
+@columnscroll_shadow-start-color_grid:                                        rgba(0,0,0,0.15);
+@columnscroll_shadow-end-color_grid:                                          rgba(0,0,0,0);
+@columnscroll_separator_color_grid:                                           #393E46;
+
+//treeGrid
+@node_expander_icon-color_treeGrid:                                           #545b67;
+@node_expander_hover_icon-color_treeGrid:                                     #ff7033;
+
+@node_font-size_treeGrid:                                                     @font-size_m;
+@hidden-node_font-size_treeGrid:                                              @font-size_m;
 
 //TODO OLD NOT SPECIFIED VARIABLES
 
@@ -190,37 +209,8 @@
 // Controls.Explorer
 @background-color_TileView-item: #464d57;
 
-// Controls.TreeGrid
-@color_TreeGridView-expander: #545b67;
-@color_TreeGridView-expander_hover: #ff7033;
-@background-color_Grid-row_hover: #464d57;
-
-@font-size_TreeGridView-row-cell-node:                                        14px;
-
-@background-color_ListView-item_hover:                                        #464d57;
-
-@font-size_TreeGridView-row-cell-hiddenNode:                                  @font-size_m;
-
-// Controls.Grid
-@background-color_Grid-header:                                                #424851;
-@border-color_Grid-row-separator:                                             #4a515a;
-@border-color_Grid-lastRow-separator:                                         #6b6b6b;
-@border-color_Grid-firstRow-separator:                                        #6b6b6b;
-@background-color-text-highlight:                                             #535C68;
-@background-color_Grid-row-sticky:                                            #424851;
-@start-color-gradient_HorizontalScroll-shadow:                                rgba(83, 92, 104, .5);
-@end-color-gradient_HorizontalScroll-shadow:                                  rgba(83, 92, 104, 0);
-@border-color_HorizontalScroll-shadow:                                        rgba(107, 107, 107, .44);
-@color_Grid-header:                                                           #999;
-@background-color_StickyHeader:                                               transparent;
-@start-color-gradient_ColumnScroll-shadow:                                    rgba(0,0,0,.15);
-@end-color-gradient_ColumnScroll-shadow:                                      rgba(0,0,0,0);
-@border-color_ColumnScroll-shadow:                                            #393E46;
-
 // Controls/DateRangeBigChoose
 @border-color_DateRangeBigChoose:                                             #535c68;
 
-// Highlight
-@highlight-text-bg: #535c68;
 
 //last line
