--- a/Controls/_masterDetail/Base/_Base.less
+++ b/Controls/_masterDetail/Base/_Base.less
@@ -66,8 +66,8 @@
 
 // Набор классов для установки градиента горизонтального скролла через backgroundStyle (master, detail)
 .controls-horizontal-gradient-master_theme-@{themeName} {
-   background: linear-gradient(to right, @start-color-gradient_ColumnScroll-shadow, @end-color-gradient_ColumnScroll-shadow);
-   border-left: 1px solid @border-color_ColumnScroll-shadow;
+   background: linear-gradient(to right, @columnscroll_shadow-start-color_grid, @columnscroll_shadow-end-color_grid);
+   border-left: @columnscroll_separator_thickness_grid solid @columnscroll_separator_color_grid;
 }
 
 .ws-is-ie,
