--- a/Controls/_popupTemplate/InfoBox/_InfoBox.less
+++ b/Controls/_popupTemplate/InfoBox/_InfoBox.less
@@ -11,8 +11,8 @@
 
 // Набор классов для установки градиента горизонтального скролла через backgroundStyle (infoBox)
 .controls-horizontal-infoBox-detail_theme-@{themeName} {
-  background: linear-gradient(to right, @start-color-gradient_ColumnScroll-shadow, @end-color-gradient_ColumnScroll-shadow);
-  border-left: 1px solid @border-color_ColumnScroll-shadow;
+  background: linear-gradient(to right, @columnscroll_shadow-start-color_grid, @columnscroll_shadow-end-color_grid);
+  border-left: @columnscroll_separator_thickness_grid solid @columnscroll_separator_color_grid;
 }
 
 .controls-InfoBoxTemplate__arrow-side-position-left {
