https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290 чиню тесты

--- a/Controls-default-theme/aliases/_treeGrid.less
+++ b/Controls-default-theme/aliases/_treeGrid.less
@@ -30,7 +30,7 @@
 
 //Иконка папки
 
-@node_expander_icon-color_treeGrid:                               #313E87;
+@node_expander_icon-color_treeGrid:                               #313E78;
 @node_expander_icon-size_treeGrid:                                @icon-size_s;
 @node_expander_icon_font-family_treeGrid:                         @icon_font-family_s;
 @node_expander_hover_icon-color_treeGrid:                         #0055BB;
@@ -62,5 +62,5 @@
 // Размеры шрифта текста
 
 @node_font-size_treeGrid:                                         @font-size_2xl;
-@hidden-node_font-size_treeGrid:                                  @font-size_l;
+@hidden-node_font-size_treeGrid:                                  @font-size_xl;
 @leaf_font-size_treeGrid:                                         @item_font-size_m_grid;
