https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290

--- a/Controls-default-theme/aliases/_breadcrumbs.less
+++ b/Controls-default-theme/aliases/_breadcrumbs.less
@@ -66,12 +66,18 @@
 // Размеры и отступы
 
 @back_offset_breadcrumbsHeadingPath:                                   8px;
+
+// Стрелка редактирования в кнопке "назад"
+
 @back_editButton_background-color_breadcrumbsHeadingPath:              @background-color;
 @back_editButton_icon-size_breadcrumbsHeadingPath:                     @icon-size_s;
 @back_editButton_icon-color_breadcrumbsHeadingPath:                    @secondary_icon-color;
 @back_editButton_hover_icon-color_breadcrumbsHeadingPath:              @secondary_hover_icon-color;
 @back_editButton_active_icon-color_breadcrumbsHeadingPath:             @secondary_hover_icon-color;
 @back_editButton_readonly_icon-color_breadcrumbsHeadingPath:           @readonly_color;
+
+// Счетчик в кнопке "назад"
+
 @back_counter_offset_breadcrumbsHeadingPath:                           4px;
 
 
