--- a/Controls-default-theme/aliases/_tabs.less
+++ b/Controls-default-theme/aliases/_tabs.less
@@ -12,7 +12,7 @@
 @primary_item_font-size_tabs:                                               @font-size_l;
 @unselected_item_font-size_tabs:                                            @font-size_m;
 
-// Цвета шрфита
+// Цвета текста
 
 @secondary_item_text-color_tabs:                                            @link_text-color;
 @primary_item_text-color_tabs:                                              @primary_text-color;
