--- a/Controls-default-theme/aliases/_editableArea.less
+++ b/Controls-default-theme/aliases/_editableArea.less
@@ -1,4 +1,4 @@
-// Общие параметры
+// Общие Переменные
 //
 // Цвета
 
@@ -12,32 +12,55 @@
 
 
 
-// Параметры для кнопок
+// Переменные для кнопки подтверждения
 //
-// Кнопка подтверждения
+// Размеры
 
 @height_applyButton_editableArea:                                           @inline_height_m_button;
 @width_applyButton_editableArea:                                            @height_applyButton_editableArea;
+
+// Обводка
+
 @border-radius_applyButton_editableArea:                                    @height_applyButton_editableArea/2;
 @box-shadow_applyButton_editableArea:                                       @box-shadow_button_functionalButton;
+
+// Цвет фона
+
 @background-color_applyButton_editableArea:                                 @success_color;
 @background-color_hover_applyButton_editableArea:                           @success_hover_background-color_button_functionalButton;
 @background-color_active_applyButton_editableArea:                          @success_active_background-color_button_functionalButton;
+
+// Иконка и текст
+
 @text-shadow_applyButton_editableArea:                                      @text-shadow_button;
 @icon-size_applyButton_editableArea:                                        @icon-size_s;
 
-// кнопка закрытия
+
+
+// Переменные для кнопки закрытия
+//
+// Размеры
+
 @height_closeButton_editableArea:                                           @inline_height_m_button;
 @width_closeButton_editableArea:                                            29px;
+
+// Обводка
+
 @border-thickness_closeButton_editableArea:                                 @border-thickness_button 0 @border-thickness_button @border-thickness_button;
 @border-color_closeButton_editableArea:                                     @border-color_closeButton_toolButton;
 @border-color_hover_closeButton_editableArea:                               @border-color_hover_closeButton_toolButton;
 @border-color_active_closeButton_editableArea:                              @border-color_active_closeButton_toolButton;
 @border-radius_closeButton_editableArea:                                    @border-radius_button_toolButton 0 0 @border-radius_button_toolButton;
 @box-shadow_closeButton_editableArea:                                       @box-shadow_closeButton_toolButton;
+
+// Цвет фона
+
 @background-color_closeButton_editableArea:                                 @background-color_closeButton_toolButton;
 @background-color_hover_closeButton_editableArea:                           @background-color_hover_closeButton_toolButton;
 @background-color_active_closeButton_editableArea:                          @background-color_active_closeButton_toolButton;
+
+// Иконка
+
 @icon_background-image_closeButton_editableArea:                            @icon_background-image_closeButton_toolButton;
 @icon-size_closeButton_editableArea:                                        @icon-size_closeButton_toolButton;
 @icon_hovered_background-image_closeButton_editableArea:                    @icon_hovered_background-image_closeButton_toolButton;
