--- a/Controls-default-theme/aliases/_grid.less
+++ b/Controls-default-theme/aliases/_grid.less
@@ -26,30 +26,53 @@
 
 
 // Переменные для списка в виде таблицы
+//
+// Текст в шапке таблицы
+
 @header_text-color_grid:                                      @label_text-color;
 @header_font-size_grid:                                       @font-size_xs;
 @header_max-font-size_grid:                                   @font-size_3xl;
 @header_multiline_max-font-size_grid:                         @font-size_m;
+
+// Форна шапки
+
 @header_background-color_grid:                                @background-color;
+
+// Высоты элементов в шапке
+
 @header_cell_min-height_grid:                                 24px;
 @header_multiline_cell_min-height_grid:                       20px;
+
+// Строка результатов
+
 @results_text-color_grid:                                     @secondary_text-color;
 @results_font-size_grid:                                      @font-size_m;
 @results_cell_min-height_grid:                                20px;
-@cell_font-size_default_grid:                                 @font-size_default;
+
+// Размер строки
+
 @cell_min-height_grid:                                        31px;
+
+// Вертикальные отступы в строке
+
 @item_padding-top_default_grid:                               @item_padding-top_s_grid;
 @item_padding-top_s_grid:                                     3px;
 @item_padding-top_l_grid:                                     6px;
 @item_padding-bottom_default_grid:                            @item_padding-bottom_s_grid;
 @item_padding-bottom_s_grid:                                  3px;
 @item_padding-bottom_l_grid:                                  6px;
+
+// Горизонтальные отступы в ячейках
+
 @cell_padding-left_s_grid:                                    3px;
 @cell_padding-left_l_grid:                                    6px;
 @cell_padding-left_default_grid:                              @cell_padding-left_l_grid;
 @cell_padding-right_s_grid:                                   3px;
 @cell_padding-right_l_grid:                                   6px;
 @cell_padding-right_default_grid:                             @cell_padding-right_l_grid;
+
+// Размеры шрифта
+
 @item_font-size_s_grid:                                       @font-size_s;
 @item_font-size_m_grid:                                       @font-size_m;
 @item_font-size_l_grid:                                       @font-size_2xl;   //TODO correct
