--- a/Controls/_scroll/Scroll/_contentEnvironmentZIndex.less
+++ b/Controls/_scroll/Scroll/_contentEnvironmentZIndex.less
@@ -2,5 +2,6 @@
 //Set a large z-index for shadows and scrollbar, leaving the ability to show content on top of them.
 //Show content above the shadows and scrollbar in a tile where items are zoomed out of the scrollContainer.
 @z-index_Scroll-contentEnviroment_horizontal: 6;
-@z-index_Scroll-contentEnvironment: 5;
+// Должен перекрывать все внутренние элементы скроируемой области. В Layout/Browser есть панельки с z-index: 6.
+@z-index_Scroll-contentEnvironment: 6;
 @z-index_Scroll-shadow: 4;
