--- a/Controls/_list/BaseControl/_BaseControl.less
+++ b/Controls/_list/BaseControl/_BaseControl.less
@@ -25,7 +25,8 @@ https://online.sbis.ru/opendoc.html?guid=16c81a19-f2a0-4b3f-a7e8-56d154b68e4c
    position: absolute;
    bottom: 0;
    right: 0;
-   z-index: 6;
+   // Должен отображаться выше элементов скрол контейнера
+   z-index: 7;
    display: flex;
    justify-content: flex-end;
 }
